js262/test/language/statements/try/S12.14_A16_T1.js


/*---
info: |
    TryStatement: "try Block Catch" or "try Block Finally" or "try Block
    Catch Finally"
es5id: 12.14_A16_T1
description: Checking if pure "try" syntax construction passes
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();


try
